改进List类型处理